@@ -6,7 +6,7 @@
 #
 # $Id: $
  
-/@[[:alnum:]]*@/!d
+/@[A-Za-z0-9_]*@/!d
 s//\
 &\
 /
